# oas3-rs

./: .clippy.toml  .codecov.yml  .cspell.yml  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  Containerfile.dev  LICENSE  README.md  codecov.json  compose.dev.yaml  flake.nix  justfile  rustfmt.toml  watch.sh
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-reviewer.yml  lint.yml  release.yml
crates/jsonpath-fmt/: Cargo.toml
crates/jsonpath-fmt/src/: lib.rs
crates/jsonpath-fmt/tests/: facet_api.rs  public_api.rs
crates/oas3/: CHANGELOG.md  Cargo.toml  README.md
crates/oas3/examples/: printer.rs
crates/oas3/src/: error.rs  lib.rs  map.rs
crates/oas3/src/conformance/: operation.rs  request.rs  response.rs
crates/oas3/src/spec/: callback.rs  components.rs  contact.rs  discriminator.rs  encoding.rs  example.rs  external_doc.rs  flows.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  media_type_examples.rs  mod.rs  operation.rs  parameter.rs  path_item.rs  ref.rs  request_body.rs  response.rs  schema.rs  security_requirement.rs  security_scheme.rs  server.rs  spec_extensions.rs  tag.rs
crates/oas3/src/validation/: error.rs  type.rs  validator.rs
crates/roast/: CHANGELOG.md  Cargo.toml  README.md
crates/roast/examples/: complex-validation.rs  conformance.rs
crates/roast/src/: lib.rs
crates/roast/src/conformance/: auth.rs  mod.rs  operation.rs  param.rs  request.rs  response.rs  runner.rs  test.rs
crates/roast/src/validation/: error.rs  mod.rs  required.rs  test_macros.rs  type.rs  validator.rs
data/oas-samples/: allof.yml  oneof-allof.yml  pet-store.yml  petstore.yml
examples/: complex-validation.rs  conformance.rs  printer.rs
integration-tests/: Cargo.toml
integration-tests/issues/: issue-318.yaml  issue-52.yaml
integration-tests/samples/: README.md
integration-tests/samples/pass/: callback.yml  discriminator-products.yaml  matrix-01.yaml  matrix-02.json  schema_prefix_items.yaml  schema_prefix_items_simple.yaml  security_complex.yaml  security_multiple_schemes.yaml  security_schemes_choice.yaml
integration-tests/src/: issues.rs  main.rs  samples.rs
scripts/: bump-changelog  bump-changelogs  update-release-notes
src/: components.rs  contact.rs  encoding.rs  error.rs  example.rs  external_doc.rs  flows.rs  header.rs  info.rs  lib.rs  license.rs  link.rs  media_type.rs  media_type_examples.rs  operation.rs  parameter.rs  path.rs  path_item.rs  ref_path.rs  request_body.rs  response.rs  schema.rs  schema_validator.rs  security_scheme.rs  server.rs  spec.rs  tag.rs
src/conformance/: auth.rs  error.rs  mod.rs  operation.rs  param.rs  request.rs  response.rs  runner.rs  test.rs  test_spec.rs
src/schema/: error.rs  mod.rs
src/spec/: components.rs  contact.rs  encoding.rs  error.rs  example.rs  external_doc.rs  flows.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  media_type_examples.rs  mod.rs  operation.rs  parameter.rs  path_item.rs  ref.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs  server.rs  tag.rs  url.rs
src/spec/schema/: error.rs  mod.rs  schema.rs  solo.rs
src/validation/: allof.rs  error.rs  mod.rs  old.rs  path.rs  required.rs  schema_validator.rs  solo.rs  test_macros.rs  type.rs  validator.rs
tests/: Cargo.toml  issues.rs  samples.rs
tests/samples/pass/: issue-79.yaml  parameters.yaml  security_disabled.yaml  security_multiple_scopes.yaml  security_optional.yaml  security_optional_or.yaml
tests/src/: issues.rs  main.rs  samples.rs
