[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
repository = "https://github.com/x52dev/oas3-rs"
license = "MIT"
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
rust_2018_idioms = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"
missing_debug_implementations = { level = "warn", priority = -1 }

[workspace.dependencies]
assert_matches = "1"
bytes = "1.7"
color-eyre = "0.6"
colored = "2"
derive_more = "1"
dotenvy = "0.15"
eyre = "0.6.12"
futures-util = "0.3"
http = "1"
indoc = "2"
log = "0.4"
maplit = "1"
oas3 = "0.12"
once_cell = "1"
pretty_assertions = "1"
pretty_env_logger = "0.5"
prettytable-rs = "0.10"
regex = "1.11.0"
reqwest = "0.12"
semver = "1"
serde = "1"
serde_json = "1"
serde_with = "3"
serde_yml = "0.0.12"
tokio = "1.40.0"
url = "2"

[patch.crates-io]
oas3 = { path = "crates/oas3" }
roast = { path = "crates/roast" }
