[workspace]
resolver = "2"
members = ["crates/*", "integration-tests"]

[workspace.package]
repository = "https://github.com/x52dev/oas3-rs"
license = "MIT"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
assert_matches = "1"
bytes = "1.11"
color-eyre = "0.6"
colored = "3"
derive_more = "2"
dotenvy = "0.15"
eyre = "0.6.12"
futures-util = "0.3"
http = "1"
indoc = "2"
log = "0.4"
maplit = "1"
oas3 = { version = "0.20", default-features = false }
once_cell = "1"
pretty_assertions = "1"
pretty_env_logger = "0.5"
prettytable-rs = "0.10"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false }
semver = "1"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1.20"
serde_with = "3"
serde_yaml = "0.9.34-deprecated"
tokio = "1.48.0"
url = "2"

[patch.crates-io]
oas3 = { path = "crates/oas3" }
roast = { path = "crates/roast" }

[workspace.lints.rust]
rust-2018-idioms = "deny"
nonstandard-style = "deny"
future-incompatible = "deny"
missing-debug-implementations = { level = "warn", priority = -1 }
missing-docs = { level = "warn", priority = -1 }

[workspace.lints.clippy]
uninlined-format-args = "warn"
disallowed-names = "warn"
