[package]
name = "oas3"
description = "Structures and tools to parse, navigate, and validate OpenAPI v3.1 specifications"
version = "0.11.0"
authors = ["softprops <d.tangren@gmail.com>", "Rob Ede <robjtede@icloud.com>"]
keywords = ["oas3", "openapi", "swagger", "api", "validation"]
categories = ["data-structures", "development-tools::testing", "parsing"]
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["validation"]
validation = []

[dependencies]
bytes = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
futures-util = { workspace = true }
http = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
assert_matches = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
indoc = { workspace = true }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
