[package]
name = "oas3"
description = "Structures and tools to parse, navigate, and validate OpenAPI v3.1 specifications"
version = "0.13.0"
authors = ["softprops <d.tangren@gmail.com>", "Rob Ede <robjtede@icloud.com>"]
keywords = ["openapi", "oas3", "swagger", "api", "oas"]
categories = ["data-structures", "parsing"]
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["validation"]
validation = []

[dependencies]
derive_more = { workspace = true, features = ["display", "error", "from"] }
http = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
eyre = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
